src/App.scss
@font-face { font-family: MilanoReg; src: url('./MTTMilano-Regular.otf'); }
@font-face { font-family: MilanoMed; src: url('./MTTMilano-Medium.otf'); }
@font-face { font-family: Genre; src: url('./Genre.otf'); }
body{
  font-family: Genre;
}

a {
  text-decoration: none;

  &:hover {
    text-decoration: none;
  }
}

h1 {
  font-weight: normal;
  font-size: 2.2em;
}

h3 {
  font-size: 1.75em;

  &.subheader {
    font-size: 1.25em;
  }
}

input {
  font-family: MilanoReg;
}

.header {
  font-size: 2.25em;
  font-weight: 400;
}

.grid {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;

  .col-half {
    width: 50%;
    align-items: center;
    justify-content: center;
    display: flex;
    flex-direction: column;
  }

  .col-quarter {
    width: 25%;
    align-items: center;
    justify-content: center;
    display: flex;
    flex-direction: column;
  }

  .col-fifth {
    width: calc(100% / 5);
  }
}

.carousel-control-prev {
  background: url('./left.png');
}

.carousel-control-next {
  background: url('./right.png');
}

.carousel.carousel-slider {

  button.control-arrow:hover {
    background-color: transparent;
  }

  .control-next.control-arrow:before, .control-prev.control-arrow:before {
    height: 15px;
    width: 15px;
    background-size: contain;
    background-repeat: no-repeat;
  }

  .control-next.control-arrow:before {
    background-image: url('./right.png');
    border: none;
  }

  .control-prev.control-arrow:before {
    
    border: none;
    background-image: url('./left.png');
  }

  .carousel-status {
    color: grey;
    text-shadow: none;
  }

  .control-dots {
    transition: .3s ease all;
    left: 0;
    padding: 0;

    .dot {
      height: 2px;
      width: calc((100% - 50%) / 8);
      border-radius: 0;
      border-top: 1px solid grey;
      margin: 0;
      box-shadow: none;
      border-bottom: 1px solid grey;
      background-color: grey;
      outline: none;
      
      &.selected {
        background: #000000;
      }

      &:first-child {
        border-left: 1px solid grey;
      }

      &:last-child {
        border-right: 1px solid grey;
      }
    }
  }
}

@media only screen and ( min-width: 426px ){
  .lg-hide {
    display: none !important;
  }
}

@media only screen and ( max-width: 768px ){
  h1 br, h3 br {
    display: none;
  }
  .grid {

    .mb-full {
      width: 100%;
    }

    .mb-one {
      order: 1;
    }

    .mb-two {
      order: 2;
    }

    .mb-three {
      order: 3;
    }

    .mb-four {
      order: 4;
    }
  }
}

@media only screen and ( max-width: 425px ){ 
  .grid {
    flex-direction: column;

    .mb-half {
      width: 50%;
    }

    .col-half {
      width: 100%;
    }
  }

  .header {
    padding: 0 15px;
  }

  .sm-hide {
    display: none !important;
  }
}

